更新搜索引擎中用户搜索来的关键字进行良性循环，优化SEO

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
   <meta name="theme-color" content="#000000">
   <meta name="keywords" content="pmbok第六版知识点总结,PMP,学习,考试,PMI,PMP 6.0,PMP分析,PMPBOOK,PMPBOOK 6.0,PMBOOK 6.0系统解析,PMBOOK系统解析,PMPBOK,PMPBOK 6.0,PMBOK 6.0系统解析,PMBOK系统解析,浅析PMP认证新版教材PMBOK指南第六版，pmbok第六版系统解析，pmbok第六版解析 ">
-  <meta name="description" content="pmbok第六版知识点总结,PMP 6.0系统的分析记录工具,项目管理系统分析记录工具,PMP,学习,考试,PMI,PMP 6.0,PMP分析,PMPBOOK,PMPBOOK 6.0,PMBOOK 6.0系统解析,PMBOOK系统解析,PMPBOK,PMPBOK 6.0,PMBOK 6.0系统解析,PMBOK系统解析，浅析PMP认证新版教材PMBOK指南第六版，pmbok第六版系统解析，pmbok第六版解析">
+  <meta name="description" content="PMP第六版储备分析,PMBOK第六版,pmbok 第六版,PMP第六版工具,pmp第六版各章重点,pmbook 第六版 计算题目,PMBOK第六版知识点总结,pmbok第六版知识点总结,PMP 6.0系统的分析记录工具,项目管理系统分析记录工具,PMP,学习,考试,PMI,PMP 6.0,PMP分析,PMPBOOK,PMPBOOK 6.0,PMBOOK 6.0系统解析,PMBOOK系统解析,PMPBOK,PMPBOK 6.0,PMBOK 6.0系统解析,PMBOK系统解析，浅析PMP认证新版教材PMBOK指南第六版，pmbok第六版系统解析，pmbok第六版解析">
   <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
@@ -25,7 +25,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>浅析PMP认证新版教材PMBOK指南第六版，pmbok第六版知识点总结，PMBOOK 6.0系统解析|PMP 6.0系统的分析记录工具,项目管理系统分析记录工具,PMP,学习,考试,PMI,PMP
+  <title>浅析PMP认证新版教材PMBOK指南第六版，PMP第六版储备分析,PMBOK第六版,pmbok 第六版,PMP第六版工具,pmp第六版各章重点,pmbook 第六版
+    计算题目,PMBOK第六版知识点总结,pmbok第六版知识点总结，PMBOOK 6.0系统解析|PMP 6.0系统的分析记录工具,项目管理系统分析记录工具,PMP,学习,考试,PMI,PMP
     6.0,PMP分析,PMPBOOK,PMPBOOK 6.0,PMBOOK 6.0系统解析,PMBOOK系统解析,PMPBOK,PMPBOK 6.0,PMBOK
     6.0系统解析,PMBOK系统解析，pmbok第六版系统解析，pmbok第六版解析</title>
 </head>
